<?xml version="1.0"?>
<package format="2">
  <name>example-robot-data</name>
  <version>3.0.0</version>
  <description>Set of robot URDFs for benchmarking and developed examples.</description>
  <!-- The maintainer listed here is for the ROS release to receive emails for the buildfarm.
  Please check the repository URL for project maintainer. -->
  <author email="carlos.mastalli@ed.ac.uk">Carlos Mastalli</author>
  <maintainer email="guilhem.saurel@laas.fr">Guilhem Saurel</maintainer>
  <maintainer email="wolfgang.merkt@ed.ac.uk">Wolfgang Merkt</maintainer>
  <license>BSD</license>

  <url type="repository">https://gepgitlab.laas.fr/gepetto/example-robot-data.git</url>

  <build_depend>git</build_depend>
  <depend>python</depend>
  <depend>python-numpy</depend>
  <depend>boost</depend>
  <depend>pinocchio</depend>

  <buildtool_depend>cmake</buildtool_depend>
  <export>
    <build_type>cmake</build_type>
  </export>
</package>
