<?xml version="1.0"?>
<package format="3">
  <name>example-robot-data</name>
  <version>3.2.0</version>
  <description>Set of robot URDFs for benchmarking and developed examples.</description>
  <!-- The maintainer listed here is for the ROS release to receive emails for the buildfarm.
  Please check the repository URL for project maintainer. -->
  <author email="carlos.mastalli@ed.ac.uk">Carlos Mastalli</author>
  <maintainer email="guilhem.saurel@laas.fr">Guilhem Saurel</maintainer>
  <maintainer email="opensource@wolfgangmerkt.com">Wolfgang Merkt</maintainer>
  <license>BSD</license>

  <url type="repository">https://github.com/gepetto/example-robot-data</url>

  <build_depend>git</build_depend>
  <depend condition="$ROS_PYTHON_VERSION == 2">python</depend>
  <depend condition="$ROS_PYTHON_VERSION == 3">python3</depend>
  <depend condition="$ROS_PYTHON_VERSION == 2">python-numpy</depend>
  <depend condition="$ROS_PYTHON_VERSION == 3">python3-numpy</depend>
  <exec_depend>pinocchio</exec_depend>
  <test_depend>pinocchio</test_depend>

  <buildtool_depend>cmake</buildtool_depend>
  <export>
    <build_type>cmake</build_type>
  </export>
</package>
