CONFIGURE_FILE(${PY_NAME}/path.py.in ${PY_NAME}/path.py)
SET(${PROJECT_NAME}_PYTHON_FILES
  robots_loader.py
  __main__.py
  __init__.py
  )

IF(PROJECT_SITELIB_ROOT)
  SET(${PY_NAME}_INSTALL_DIR ${PROJECT_SITELIB_ROOT}/${PYTHON_SITELIB}/${PY_NAME})
ELSE()
  SET(${PY_NAME}_INSTALL_DIR ${CMAKE_INSTALL_PREFIX}/${PYTHON_SITELIB}/${PY_NAME})
ENDIF()

FOREACH(python ${${PROJECT_NAME}_PYTHON_FILES})
  INSTALL(FILES
    "${${PROJECT_NAME}_SOURCE_DIR}/python/${PY_NAME}/${python}"
    DESTINATION ${${PY_NAME}_INSTALL_DIR})
ENDFOREACH(python ${${PROJECT_NAME}_PYTHON_FILES})

INSTALL(FILES ${CMAKE_CURRENT_BINARY_DIR}/${PY_NAME}/path.py DESTINATION "${${PY_NAME}_INSTALL_DIR}")
